--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_library(tests testHead.c approx_tests.c derivatives_test.c neuronLayer_tests.c)
+add_library(tests STATIC testHead.c approx_tests.c derivatives_test.c neuronLayer_tests.c)
